--- a/app/views/public/pages/cabine_essayage.html.erb
+++ b/app/views/public/pages/cabine_essayage.html.erb
@@ -1,6 +1,6 @@
 <%= page_header("Cabine d'essayage", "Sélectionner vos produits et venez les essayer en boutique",
-image1: "https://images.pexels.com/photos/6494099/pexels-photo-6494099.jpeg",
-image2: "https://images.pexels.com/photos/7304211/pexels-photo-7304211.jpeg") %>
+image1: "essayage.webp",
+image2: "essayage2.webp") %>
 
 <div class="public-main-content">
   <div class="container-fluid p-0">
@@ -48,7 +48,7 @@ image2: "https://images.pexels.com/photos/7304211/pexels-photo-7304211.jpeg") %>
             </div>
             <h5 class="fw-bold mb-3 text-light">4. Essayage</h5>
             <p class="text-light opacity-75 small mb-0">
-              Testez vos tenues dans notre cabine avec l'aide de nos conseillers en image.
+              Testez vos tenues dans notre cabine avec l'aide de nos conseillères en image.
             </p>
           </div>
         </div>
