--- a/app/views/public/pages/la_boutique/_section_boutique.html.erb
+++ b/app/views/public/pages/la_boutique/_section_boutique.html.erb
@@ -31,7 +31,7 @@
       
       <!-- Colonne Vidéo -->
       <div class="col-12 col-md-6 order-1 order-md-2 d-flex">
-        <div class="w-100 h-100" style="overflow: hidden;">
+        <div class="w-100" style="overflow: hidden; max-height: 800px;">
           <video autoplay muted loop playsinline class="w-100 h-100" style="object-fit: cover;">
             <source src="https://res.cloudinary.com/dukne3lhz/video/upload/v1767993750/video2_rgzof7.mp4" type="video/mp4">
           </video>
@@ -74,7 +74,7 @@
       <div class="carousel-inner">
         <%= simple_image_text_section(
           image_path: "/images/cat_tenues_soiree.jpg",
-          title: "Location de tenues de soirée",
+          title: "Tenues de soirée",
           text: "Découvrez notre vaste collection de robes et tenues de soirée pour tous vos événements. Location ou achat, nous vous accompagnons dans votre choix pour que vous soyez parfaite le jour J.",
           active: true
         ) %>
