--- a/app/views/public/pages/le_concept/_section_introduction.html.erb
+++ b/app/views/public/pages/le_concept/_section_introduction.html.erb
@@ -1,11 +1,12 @@
 <%= render partial: "public/shared/section_image_text", locals: {
   title: "Une nouvelle façon de vivre la mode",
-  image_path: "/images/cat_robes_mariees.jpg",
+  image_path: "/images/le_concept3.webp",
   description: "Autour d'un soir révolutionne votre expérience vestimentaire avec un concept innovant qui allie élégance, accessibilité et personnalisation. Que ce soit pour un mariage, une soirée ou un événement spécial, nous vous offrons la liberté de choisir comment porter la mode.",
   features: [
     "Location flexible",
     "Vente exclusive",
     "Sur mesure"
-  ]
+  ],
+  image_position: "center center"
 } %>
 
