--- a/app/views/public/pages/nos_autres_activites.html.erb
+++ b/app/views/public/pages/nos_autres_activites.html.erb
@@ -1,8 +1,8 @@
 <%= page_header(
   "Nos autres activités", 
   "Explorez l'ensemble de nos services",
-  image1: "https://images.pexels.com/photos/707377/pexels-photo-707377.jpeg",
-  image2: "https://images.pexels.com/photos/356170/pexels-photo-356170.jpeg"
+  image1: "autres_activites1.webp",
+  image2: "autres_activites2.webp"
 ) %>
 
 
@@ -11,7 +11,7 @@
     <!-- Introduction -->
     <%= render partial: "public/shared/section_image_text", locals: {
       title: "Bien plus qu'une simple boutique",
-      image_path: "/images/cat_costume.jpg",
+      image_path: "/images/tournage.webp",
       description: "Au-delà de nos collections de tenues de soirée, Autour d'un Soir vous accompagne dans tous vos projets nécessitant des tenues d'exception. Que ce soit pour un événement d'entreprise, une production audiovisuelle ou une reconstitution historique, nous sommes là pour vous.",
       features: [
         "Costumes d'époque",
@@ -178,7 +178,7 @@
             icon: "people"
           },
           {
-            text: "Pour notre mariage sur le thème des années 20, A1soir a su habiller tout notre cortège. Un travail remarquable et une équipe à l'écoute !",
+            text: "Pour notre mariage sur le thème des années 20, l'équipe Autour d'un Soir a su habiller tout notre cortège. Un travail remarquable et une équipe à l'écoute !",
             name: "Sophie & Marc",
             subtitle: "Mariage thématique",
             icon: "heart"
