--- a/app/views/public/shared/_section_categories.html.erb
+++ b/app/views/public/shared/_section_categories.html.erb
@@ -7,7 +7,7 @@
       url: produits_filter_url(category_names: ["robes de mariée courtes", "robes de mariée longues"]),
       image: "cat_robes_mariees.jpg",
       subtitle: "Découvrez notre sélection de robes de mariée courtes et longues pour votre jour spécial",
-      image_position: "top"
+      image_position: "center 25%"
     ) %>
   </div>
 
