--- a/app/views/public/pages/contact.html.erb
+++ b/app/views/public/pages/contact.html.erb
@@ -2,7 +2,8 @@
   "Contact", 
   "Nous sommes à votre écoute",
   image1: "contact1.webp",
-  image2: "contact2.webp") %>
+  image2: "contact2.webp",
+  image2_position: "center top") %>
 
 <div class="public-main-content">
     <div class="container-fluid">
