--- a/app/views/public/pages/le_concept.html.erb
+++ b/app/views/public/pages/le_concept.html.erb
@@ -1,6 +1,8 @@
 <%= page_header("Le concept", "Découvrez notre concept unique de location de tenues", 
 image1: "le_concept1.webp", 
-image2: "le_concept2.webp") %>
+image2: "le_concept2.webp",
+image1_position: "center top",
+image2_position: "center top") %>
 
 <div class="public-main-content">
     <%= render partial: "public/pages/le_concept/section_introduction" %>
