fix cards produits with data scroll reveal

--- a/app/views/public/pages/_carousel.html.erb
+++ b/app/views/public/pages/_carousel.html.erb
@@ -2,7 +2,7 @@
 <% container_id = "carouselContainer_#{produit.id}" %>
 
 <div id="<%= container_id %>">
-  <div id="<%= carousel_id %>" class="carousel slide" data-bs-ride="carousel" data-controller="carousel">
+  <div id="<%= carousel_id %>" class="carousel slide" data-controller="carousel">
     <div class="carousel-inner <%= carousel_class %> rounded-0 overflow-hidden">
       <% slide_index = 0 %>
       
