styling - opti video hp

--- a/app/views/public/pages/filtres/_filtres_categorie.html.erb
+++ b/app/views/public/pages/filtres/_filtres_categorie.html.erb
@@ -34,7 +34,7 @@
                     from_cabine: params[:from_cabine],
                     type_produit: params[:type_produit]
                 ), 
-                method: :get,
+               # method: :get,
                 class: "dropdown-item #{'fw-bold' if selected_ids.empty?}" %>
             </li>
 
