--- a/app/views/public/pages/home/_section_hero.html.erb
+++ b/app/views/public/pages/home/_section_hero.html.erb
@@ -1,5 +1,5 @@
 <%
-  video_url = "https://www.pexels.com/fr-fr/download/video/5379128/"
+  video_url = "https://res.cloudinary.com/dukne3lhz/video/upload/v1769714989/robe_mariee_hp_w3kmwr.webm"
   title = "Mariage et Tenues de Soirée"
   subtitle = "Des collections pour vous embellir"
   button_text = "Découvrir"
