--- a/app/views/public/demande_rdv/_form.html.erb
+++ b/app/views/public/demande_rdv/_form.html.erb
@@ -80,7 +80,7 @@
           </div>
           
           <!-- ÉTAPE 3 : Formulaire coordonnées -->
-          <div class="tab-pane fade" id="step3-pane" role="tabpanel" aria-labelledby="step3-tab" tabindex="0">
+          <div class="tab-pane fade" id="step3-pane" role="tabpanel" aria-labelledby="step3-tab" tabindex="0" style="max-width: 1000px; margin: 0 auto;">
               <div class="d-flex justify-content-between align-items-center mb-4">
                 <a href="#" class="text-dark text-decoration-none" style="text-decoration: underline !important; text-decoration-color: #000 !important; text-underline-offset: 4px;" data-action="click->calendar-picker#goBack">
                   <i class="bi bi-arrow-left me-2"></i>Retour
